--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <section class="one">
-        <h1 class="scroll" data-rate=".4" data-direction="vertical">some stuff</h1>
+        <h1 class="scroll" data-rate=".4" data-direction="vertical">big city</h1>
     </section>
 
     <section class="two">
