--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             // draw in reverse 
             path.style.strokeDashoffset = pathLength - drawLength;
 
+            // parallax scrolling effect 
             const target = document.querySelectorAll('.scroll');
 
             var index = 0, length = target.length;
